@@ -4,13 +4,9 @@ S3method(coef,seas)
 S3method(identify,seas)
 S3method(monthplot,seas)
 S3method(nobs,seas)
-S3method(plot,revisions)
 S3method(plot,seas)
-S3method(plot,slidingspans)
 S3method(print,import.spc)
-S3method(print,revisions)
 S3method(print,seas)
-S3method(print,slidingspans)
 S3method(print,spclist)
 S3method(print,summary.seas)
 S3method(residuals,seas)
@@ -29,12 +25,9 @@ export(original)
 export(out)
 export(outlier)
 export(qs)
-export(regressioneffects)
 export(residplot)
-export(revisions)
 export(seas)
 export(series)
-export(slidingspans)
 export(spc)
 export(static)
 export(transformfunction)
